--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,26 @@
 		<p class="description">Looking for things to do in Bangkok? Something new, something different? Here are our best picks of local 1-day trips in/from Bangkok, categorized in various aspects, just for you to check out.</p>
 	  </div>
 	  <div class="inspiration">
-
+		<div class="row">
+			<div class="col-md-4" id='00'>
+			</div>
+			<div class="col-md-8" id='01'>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-3" id='10'>
+			</div>
+			<div class="col-md-3" id='11'>
+			</div>
+			<div class="col-md-3" id='12'>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8" id='20'>
+			</div>
+			<div class="col-md-4" id='21'>
+			</div>
+		</div>
 	  </div>
 	  <div class="center">
 	  	<button type="button" class="btn btn-warning btn-lg">All Inspirations</button>
